
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int i8 ;
typedef size_t i32 ;


 size_t Error ;
 int* PASS ;
 void* PORT ;
 int* USER ;
 void* atoi (int*) ;
 int exit (int ) ;
 int* host_addr ;
 void* option ;
 int printf (char*,size_t,int*) ;

i32 args(i32 argc,i8** argv){
             i32 i;
             argc--;
             for(i=1;i<argc;i++){
                 switch(argv[i][1]){
                        case 'h':
                               host_addr=argv[++i];
                               break;
                        case 'u':
                               USER=argv[++i];
                               break;
                        case 'w':
                               PASS=argv[++i];
                               break;
                        case 'p':
                               PORT=atoi(argv[++i]);
                               break;
                        case 'o':
                               option=atoi(argv[++i]);
                               break;
                        default:{
                               printf("error with argument nr %d:(%s)\n",i,argv[i]);
                               return Error;
                               exit(0);
                        }
               }
           }

           return 1;
      }
